--- a/templates/sidebar/reviewer_sidebar.html
+++ b/templates/sidebar/reviewer_sidebar.html
@@ -1,31 +1,86 @@
 
+<!-- Dashboard -->
+<li class="nav-item">
+  <a href="{% url 'reviewer:dashboard' %}" class="nav-link">
+    <i class="fas fa-tachometer-alt mr-1"></i>
+    <p>Reviewer Dashboard</p>
+  </a>
+</li>
+
+<!-- Articles Management -->
 <li class="nav-item has-treeview">
   <a href="#" class="nav-link">
-    <i class="fas  fa-newspaper mr-1"></i>
+    <i class="fas fa-newspaper mr-1"></i>
     <p>
-      Article Mangement
-
+      Article Management
       <i class="fas fa-angle-left right"></i>
-
-
     </p>
   </a>
 
   <ul class="nav nav-treeview">
     <li class="nav-item ml-3">
       <a href="{% url 'reviewer:normal-user-index' %}" class="nav-link">
-        <i class="fas fa-xs fa-circle"></i>
-        <p>
-          View Articles
-
-        </p>
+        <i class="fas fa-list"></i>
+        <p>All Articles</p>
+      </a>
+    </li>
+    
+    <li class="nav-item ml-3">
+      <a href="#" class="nav-link" onclick="filterArticles('under-review')">
+        <i class="fas fa-clock"></i>
+        <p>Under Review</p>
       </a>
     </li>
 
+    <li class="nav-item ml-3">
+      <a href="#" class="nav-link" onclick="filterArticles('accepted')">
+        <i class="fas fa-check-circle"></i>
+        <p>Accepted Articles</p>
+      </a>
+    </li>
 
+    <li class="nav-item ml-3">
+      <a href="#" class="nav-link" onclick="filterArticles('rejected')">
+        <i class="fas fa-times-circle"></i>
+        <p>Rejected Articles</p>
+      </a>
+    </li>
   </ul>
+</li>
 
-  
+<!-- Review Tools -->
+<li class="nav-item has-treeview">
+  <a href="#" class="nav-link">
+    <i class="fas fa-tools mr-1"></i>
+    <p>
+      Review Tools
+      <i class="fas fa-angle-left right"></i>
+    </p>
+  </a>
+
+  <ul class="nav nav-treeview">
+    <li class="nav-item ml-3">
+      <a href="#" class="nav-link">
+        <i class="fas fa-comment-alt"></i>
+        <p>Feedback Templates</p>
+      </a>
+    </li>
+    
+    <li class="nav-item ml-3">
+      <a href="#" class="nav-link">
+        <i class="fas fa-file-pdf"></i>
+        <p>PDF Annotation</p>
+      </a>
+    </li>
+  </ul>
+</li>
+
+<!-- Reports -->
+<li class="nav-item">
+  <a href="#" class="nav-link">
+    <i class="fas fa-chart-bar mr-1"></i>
+    <p>Review Reports</p>
+  </a>
 </li>
 {% include "sidebar/includes/authentication.html" %}
 <li class="nav-item">
