--- a/apps/admin_user/templates/admin/manage_user.html
+++ b/apps/admin_user/templates/admin/manage_user.html
@@ -17,34 +17,36 @@
       <div class="col-12">
 
 
-        <div class="card">
-          
-          <div class="card-header" style="background-color: #026CAC;color:white;">
-            <span>{{title}}</span>
-
-           
-            </form>
+        <div class="card shadow-sm">
+          <div class="card-header py-3" style="background-color: #2c3e50; color: white;">
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="mb-0"><i class="fa fa-users"></i> {{title}}</h5>
+              <div class="d-flex">
+                <form class="form-inline mr-2">
+                  <div class="input-group">
+                    <input type="search" class="form-control" placeholder="Search users...">
+                    <div class="input-group-append">
+                      <button class="btn btn-light" type="submit">
+                        <i class="fa fa-search"></i>
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
-         
-          <!-- /.card-header -->
-          <div class="card-body table-responsive">
-            
-            {% url '' as button_url %}
           
-                 
-            <table id="dataTable" class="table table-sm  table-striped table-bordered table-hover  text-nowrap  dataTable no-footer">
-              <thead>
+          <div class="card-body table-responsive">
+            <table id="dataTable" class="table table-hover table-striped">
+              <thead class="bg-light">
                 <tr>
-                  <th></th>
-                  <th>ID</th>
-                  <th>Image</th>
-                  <th>Full Name</th>
-                  <th>Username</th>
-                  <th>Address</th>
-                  <th>Created At</th>
-
-                
-                
+                  <th class="border-0"></th>
+                  <th class="border-0">ID</th>
+                  <th class="border-0">User</th>
+                  <th class="border-0">Username</th>
+                  <th class="border-0">Address</th>
+                  <th class="border-0">Created At</th>
+                  <th class="border-0">Actions</th>
                 </tr>
               </thead>
               <tbody>
@@ -53,20 +55,31 @@
                   <td></td>
                   <td>{{ forloop.counter }}</td>
                   <td>
-                    {% if user.image %}
-
-                 <a href="{{ user.image.url }}">   <img src="{{ user.image.url }}" alt="" style="width:35px;height:35px;" class="img-circle" /></a>
-
-                    {% else %}
-                    <img src="{% static 'image/default_profile.png' %}" alt="" style="width:35px;height:35px;" class="img-circle" />
-                    {% endif %}
-                    </td>
-                  <td>{{ user.full_name }}</td>
-
+                    <div class="d-flex align-items-center">
+                      {% if user.image %}
+                        <img src="{{ user.image.url }}" alt="" class="rounded-circle mr-2" style="width:40px;height:40px;object-fit:cover;" />
+                      {% else %}
+                        <img src="{% static 'image/default_profile.png' %}" alt="" class="rounded-circle mr-2" style="width:40px;height:40px;object-fit:cover;" />
+                      {% endif %}
+                      <div>
+                        <h6 class="mb-0">{{ user.full_name }}</h6>
+                        <small class="text-muted">{{ user.email }}</small>
+                      </div>
+                    </div>
+                  </td>
                   <td>{{ user.normal_user.username }}</td>
                   <td>{{ user.address }}</td>
-               
-                  <td>{{ user.created_at }}</td>
+                  <td>{{ user.created_at|date:"M d, Y" }}</td>
+                  <td>
+                    <div class="btn-group">
+                      <a href="#" class="btn btn-sm btn-outline-primary" title="Edit">
+                        <i class="fa fa-edit"></i>
+                      </a>
+                      <a href="#" class="btn btn-sm btn-outline-danger" title="Delete">
+                        <i class="fa fa-trash"></i>
+                      </a>
+                    </div>
+                  </td>
                 </tr>
                 {% endfor %}
               </tbody>
