--- a/apps/reviewer/templates/reviewer/articles_under_review.html
+++ b/apps/reviewer/templates/reviewer/articles_under_review.html
@@ -16,20 +16,24 @@
         <div class="col-12">
 
 
-            <div class="card " style="background-color: rgb(247, 245, 245);">
-
-                <div class="card-header" style="background-color: #026CAC;color:white;">
-                    <span>Articles Under Review</span>
-                   
-
+            <div class="card shadow-sm">
+                <div class="card-header py-3" style="background-color: #2c3e50; color: white;">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h5 class="mb-0">
+                            <i class="fa fa-clock-o"></i> Articles Under Review
+                        </h5>
+                        <div class="d-flex">
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="myInput" placeholder="Search articles...">
+                                <div class="input-group-append">
+                                    <span class="input-group-text bg-light">
+                                        <i class="fa fa-search"></i>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                  
-            </div>
-            </li>
-
-            </ul>
-            <input class="form-control my-2" id="myInput" type="text" placeholder="Search with Category..">
             <div class="row" id="filter_div">
                 {% for article in articles_under_review %}
                 {% include "reviewer/includes/article-body.html" %}
