--- a/templates/sidebar/sidebar.html
+++ b/templates/sidebar/sidebar.html
@@ -1,130 +1,71 @@
 {% load static %}
-
 {% load auth_extras %}
 
 <!------------------------------------------- Main Sidebar Container------------------------------------------------- -->
 <aside class="main-sidebar sidebar-light elevation-4" style="background-color: white;">
-  <!-- style="background-color: #004de6;">-->
   <!-- Brand Logo -->
-  <a href="{% url 'home' %}">
+  <a href="{% url 'home' %}" class="brand-link">
     <div class="user-panel ml-3 pb-1 mr-2 mt-1 d-flex">
-      <img src="https://4m4you.com/wp-content/uploads/2020/06/logo-placeholder.png" style="width:191px;height:65px;" class="img-rectangle ">
-      <span class="brand-text font-weight-light  ml-1 text-white">{{ detail.site_title }}</span>
+      <img src="https://4m4you.com/wp-content/uploads/2020/06/logo-placeholder.png" style="width:191px;height:65px;" class="img-rectangle">
+      <span class="brand-text font-weight-light ml-1">UNIQUE JMS</span>
     </div>
   </a>
 
   <!-----------------------------------------------Sidebar ----------------------------------------------->
-
   <div class="sidebar">
-
-    <div class="user-panel mt-1 pb-3 mb-1 d-flex">
+    <!-- User Panel -->
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
       <div class="image">
-
         <img src="{% static 'image/admin.png' %}" class="img-circle elevation-2" alt="User Image">
-
       </div>
-
       <div class="info">
-
-
-        <a href="" class="d-block">{{ request.user.username }}</a>
-
-
-       
-
-        
-
-
+        <a href="#" class="d-block">{{ request.user.username }}</a>
       </div>
     </div>
 
-    <!-- -----------------------------------------------Sidebar Menu------------------------------------------------ -->
-
+    <!-- Sidebar Menu -->
     <nav class="mt-2">
-      <ul class="nav nav-pills nav-sidebar flex-column nav-design" data-widget="treeview" role="menu"
-        data-accordion="false">
-        <li class="nav-item">
-          <a href="/" class="nav-link">
-            <i class="fa  fa-home mr-1"></i>
-            <p>
-              Home
-
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="{% url 'home' %}" class="nav-link">
-            <i class="fas  fa-tachometer-alt mr-1"></i>
-            <p>
-              Dashboard
-
-            </p>
-          </a>
-        </li>
-
-        <!-----------------------------------User Sidebar------------------------------------------>
-        {% if request.user|has_group:'Admin' or request.user.is_superuser %}
-
-     
-
-        <!-----------------------------------Role_Permission Sidebar------------------------------------------>
-
-  
-
-
-     
-
-        <!-- <li class="nav-item has-treeview">
-          <a href="https://cbt.gci.edu.np/admin/login" class="nav-link">
-            <p>
-              <i class="fas  fa-th"></i>  GCI CBT
-
-
-
-            </p>
-          </a>
-        </li> -->
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         
+        <!-----------------------------------Admin Sidebar (Superuser or Admin Group)------------------------------------------>
+        {% if request.user.is_superuser %}
+          <!-- Superuser Menu -->
+          {% include 'sidebar/admin_sidebar.html' %}
+
+        <!-----------------------------------Admin Sidebar (Admin Group)------------------------------------------>
+        {% elif request.user.groups.all.0.name == 'Admin' %}
+          <!-- Admin Menu -->
+          {% include 'sidebar/admin_sidebar.html' %}
+
+        <!-----------------------------------Author/User Sidebar------------------------------------------>
+        {% elif request.user.groups.all.0.name == 'User' %}
+          <!-- Author Menu -->
+          {% include 'sidebar/user_sidebar.html' %}
+
+        <!-----------------------------------Reviewer Sidebar------------------------------------------>
+        {% elif request.user.groups.all.0.name == 'Reviewer' %}
+          <!-- Reviewer Menu -->
+          {% include 'sidebar/reviewer_sidebar.html' %}
         
-        
-
-
-   
-    
-
-        {% include 'sidebar/admin_sidebar.html' %}
-
-    
-
-       
-
-
-        <!-----------------------------------For student Sidebar------------------------------------------>
-        {% elif request.user|has_group:'User' %}
-
-        {% include 'sidebar/user_sidebar.html' %}
-
-           <!-----------------------------------For parent Sidebar------------------------------------------>
-        {% elif request.user|has_group:'Reviewer' %}
-        {% include 'sidebar/reviewer_sidebar.html' %}
+        {% else %}
+          <!-- Default Menu - No Group Assigned -->
+          <li class="nav-item">
+            <a href="#" class="nav-link text-warning">
+              <i class="fas fa-exclamation-triangle nav-icon"></i>
+              <p>No Role Assigned</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'logout' %}" class="nav-link">
+              <i class="fas fa-sign-out-alt nav-icon"></i>
+              <p>Logout</p>
+            </a>
+          </li>
         {% endif %}
-
-      </ul>
-      </li>
-      </li>
-
-
-
-
-
-
-
-
 
       </ul>
     </nav>
     <!-- /.sidebar-menu -->
   </div>
   <!-- /.sidebar -->
-
 </aside>
